<resources>
    <string name="app_name">Школа 1329</string>
    <string name="title_activity_login">Войти</string>

    <string name="title_participants">Участники:</string>

    <!-- Strings related to login -->
    <string name="prompt_nickname">Вовочка</string>
    <string name="prompt_password">ABC123DEF</string>
    <string name="enter_code_input_code">Введите регистрационный пароль: </string>
    <string name="enter_code_input_nickname">Введите подпись: </string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="error_invalid_nickname">Подпись содержит невалидные символы</string>
    <string name="error_invalid_password">Пароль не подходит</string>
    <string name="error_field_required">Это поле обязаельно!</string>
    <string name="permission_rationale">"Необходимо разрешить доступ к контактам!"</string>
    <string name="load_error">Произошла ошибка. Пожалуйста, проверьте интернет-соединение!</string>
    <string name="network_error">Произошла ошибка. Пожалуйста, проверьте интернет-соединение!</string>
    <string name="error_try_again">Произошла ошибка. Пожалуйста попробуйте еще раз.</string>
    <string name="error_empty_string">Пустая строка!</string>
    <string name="error_wrong_format">Неправильный формат строки!</string>

    <string name="title_activity_dashboard">Школа 1329</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Notifications">Оповещения</string>

    <string name="all_groups">Все группы</string>
    <string name="my_groups">Мои группы</string>
    <string name="create_group">Создать группу</string>
    <string name="groups">Группы</string>
    <string name="i_am_student">Я ученик</string>
    <string name="i_am_teacher">Я учитель</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="code_for_students">Код для учеников</string>
    <string name="code_for_teachers">Код для учителей</string>
    <string name="code_eligible_until">Выберите время истечения кода:</string>
    <string name="code_for">Выберите тип кода:</string>
    <string name="group_name_label">Название группы: </string>
    <string name="Create">Создать</string>
    <string name="group_name_hint">9Б</string>
    <string name="welcome">Доброй пожаловать!</string>

    <string name="all_events">Все мероприятия</string>
    <string name="my_events">Мои мероприятия</string>
    <string name="create_event">Создать мероприятие</string>

    <string name="startDate_note">Начало: </string>
    <string name="endDate_note">Окончание: </string>
    <string name="event_name_label">Название:</string>
    <string name="event_name_hint">Родительское собрание</string>
    <string name="event_description_label">Описание:</string>
    <string name="event_description_hint">На повестке обсуждение следующих тем: …</string>
    <string name="event_startDate_label">Начало мероприятия: </string>
    <string name="event_endDate_label">Окончание: </string>
    <string name="event_place_label">Место: </string>

    <string name="title_activity_event_details">Мероприятие</string>
    <string name="about_event">О мероприятии</string>
    <string name="event_groups">Группы-участники</string>
    <string name="event_comments">Обсуждение</string>

    <!-- menu titles -->
    <string name="title_menu_allgroups">Все группы</string>

    <!-- dialog -->
    <string name="title_create_group_dialog">Создать группу</string>
    <string name="title_hint_group_name">Введите название группы</string>
    <string name="title_hint_publish">Введите название оповещения</string>
    <string name="title_dialog_cancel_btn">ОТМЕНА</string>
    <string name="title_dialog_add_btn">СОЗДАТЬ</string>

    <!-- NavigationDrawer -->

    <string name="title_nav_schedule">Расписание</string>
    <string name="title_nav_groups">Группы</string>
    <string name="title_nav_events">Мероприятия</string>
    <string name="title_nav_create_code">Сгенерировать код</string>

    <string name="event_createdBy_label">Ответственный: </string>
    <string name="about_group">О группе</string>
    <string name="group_participants">Участники</string>
    <string name="event_place_hint">Кабинет 205</string>
    <string name="group_item_addButton_label">Добавить</string>
    <string name="group_item_removeButton_label">Убрать</string>
    <string name="send_button">Отправить</string>
    <string name="publish_notification_title">Публикация оповещения</string>
    <string name="notification_text_note">Текст оповещения: </string>
    <string name="notification_groups_note">Получатели: </string>
    <string name="title_nav_notifications">Оповещения</string>
    <string name="title_nav_publish_notifications">Опубликовать оповещение</string>
    <string name="publish_notification_button">Опубликовать</string>
    <string name="notification_publish_success">Оповещение успешно опубликовано!</string>
    <string name="confirm">Готово</string>
    <string name="publish_notification_repeat_mode_label">Повторять оповещение:</string>
    <string name="repeat_mode_on_weekdays">По:</string>
    <string name="repeat_mode_monday">Пн</string>
    <string name="repeat_mode_tuesday">Вт</string>
    <string name="repeat_mode_wednesday">Ср</string>
    <string name="repeat_mode_thursday">Чт</string>
    <string name="repeat_mode_friday">Пт</string>
    <string name="repeat_mode_saturday">Сб</string>
    <string name="repeat_mode_sunday">Вс</string>
    <string name="repeat_mode_every">Каждый:</string>
    <string name="repeat_mode_every_week">Раз в неделю</string>
    <string name="repeat_mode_month_day">День месяца</string>
    <string name="repeat_mode_never">Не повторять</string>
    <string name="title_activity_group_details">Группа</string>

    <!-- Week days -->
    <string-array name="week_days">
        <item> </item>
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>

    <!-- Days of month -->
    <string-array name="days_of_month">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string name="title_activity_all_groups">AllGroupsActivity</string>
    <string name="search">Поиск</string>
    <string name="title_menu_allevents">Все мероприятия</string>

</resources>
