<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_generate_code"
            android:title="@string/title_nav_create_code" />

        <item
            android:id="@+id/nav_schedule"
            android:title="@string/title_nav_schedule" />
    </group>
    <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_groups"
                android:title="@string/groups" />
            <item
                android:id="@+id/nav_events"
                android:title="@string/title_nav_events" />
    </group>
    <group android:title="@string/Notifications">
            <item
                android:id="@+id/nav_publish_notification"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/title_nav_notifications" />
    </group>

</menu>
