<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

        <variable
            name="selectStartDateCommand"
            type="android.view.View.OnClickListener" />

        <variable
            name="selectEndDateCommand"
            type="android.view.View.OnClickListener" />
        <variable
            name="createCommand"
            type="android.view.View.OnClickListener" />
        <variable
            name="event"
            type="com.djavid.schoolapp.viewmodel.events.EventItem" />
    </data>


    <AbsoluteLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:layout_marginBottom="8dp"
            android:layout_y="0dp"
            android:scrollbars="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <TextView
                    android:id="@+id/eventNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_name_label"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/eventTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_name_hint"
                    android:inputType="textShortMessage"
                    android:text="@={event.title}"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/eventNameLabel" />

                <TextView
                    android:id="@+id/eventDescriptionLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/event_description_label"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/eventTitle" />

                <EditText
                    android:id="@+id/eventDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_description_hint"
                    android:inputType="textLongMessage"
                    android:singleLine="false"
                    android:text="@={event.description}"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/eventDescriptionLabel" />

                <TextView
                    android:id="@+id/eventPlaceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/event_place_label"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/eventDescription" />

                <EditText
                    android:id="@+id/eventPlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_place_hint"
                    android:inputType="textLongMessage"
                    android:singleLine="false"
                    android:text="@={event.place}"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/eventPlaceLabel" />


                <TextView
                    android:id="@+id/eventStartDateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/event_startDate_label"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/eventPlace" />

                <Button
                    android:id="@+id/startDateDialogResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{event.startDateString}"
                    app:layout_constraintStart_toStartOf="parent"
                    android:onClick="@{selectStartDateCommand::onClick}"
                    app:layout_constraintTop_toBottomOf="@+id/eventStartDateLabel" />

                <TextView
                    android:id="@+id/eventEndDateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_endDate_label"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/startDateDialogResult" />


                <Button
                    android:id="@+id/endDateDialogResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{event.endDateString}"
                    app:layout_constraintStart_toStartOf="parent"
                    android:onClick="@{selectEndDateCommand::onClick}"
                    app:layout_constraintTop_toBottomOf="@+id/eventEndDateLabel" />

            </android.support.constraint.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/createEventButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_x="0dp"
            android:layout_y="400dp"
            android:height="50dp"
            android:onClick="@{createCommand::onClick}"
            android:text="@string/Create"
            tools:text="Create" />
    </AbsoluteLayout>
</layout>